site-capstone/Frontend/src/Components/MedicationDetails/MedicationDetails.css
.together{
    display:inline-block;
}

.capitalize-me::first-letter {
    text-transform: capitalize;
  }

.capitalize{
  text-transform: capitalize;

}

  .pill {
    background-color: #ddd;
    border: none;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    margin: 4px 2px;
    border-radius: 16px;
  }

  .back-link{
      color: black;
      text-decoration: none;
      background-color: transparent;
      border-color: transparent;
      margin-bottom: 40px;
  }

a{
    text-decoration: none;
}

/* Screen for very small phone */
@media only screen and (max-width: 360px) and (min-width: 0px){
  .exam-details{
  
      margin-left: 10%;
      margin-right: 10%;
          
      
  }

  
}

/* Screen for small phone */
@media only screen and (max-width: 413px) and (min-width: 361px){
  .exam-details{
  
      margin-left: 0%;
      margin-right: 0%;
          
      
  }

  .details-container{
    width: 100vw;
  }

  
}

/* Screen for phone */
@media only screen and (max-width: 767px) and (min-width: 414px){
  .exam-details{
  
      margin-left: 10%;
      margin-right: 10%;
          
      
  }

  
}

@media only screen and (width: 667px) {
  .exam-details{
  
      margin-left: 10%;
      margin-right: 10%;
          
      
  }

  
}

/* Screen for small tablet */
@media only screen and (max-width: 900px) and (min-width: 768px){
  .exam-details{
  
      margin-left: 10%;
      margin-right: 10%;
          
      
  }

  
}

/* Screen for normal tablet */
@media only screen and (max-width: 950px) and (min-width: 901px){
  .exam-details{
  
      margin-left: 10%;
      margin-right: 10%;
          
      
  }

  
}


/* Screen for screen larger than tablet */
@media only screen and (min-width: 951px){
  .exam-details{
  
      padding-left: 20%;
      padding-right: 20%;
      border-color: black;
          
      
  }
 
}

.refill-btn{
  justify-content: center;
  margin-left: 2%;
}

.delete-btn{
  border-radius: 0;
}

.alignment-left{
  text-align: left;
}

.alignment-right{
  float: right;
}

.edit-button{
  width: 60px;
  height: 38px;
  
}

.column2{
  justify-content: start;
  align-items: flex-start;
  top: 0;
  margin: 0px;
}

.label-fonts{
  font-size: large;
}

.please{
  display: inline;
  padding: 0px;
}

.row-justification{
  align-items: flex-start;
  justify-content: start;
}



@media only screen and (min-width: 1180px){

  .second-column{
    /* border-left: solid; */
    /* border-color: #212529; */
  }

  .details-container{
    width: 90%;
    padding: 0px;
  }
}

@media only screen and (min-width: 700px){

  .second-column{
    /* border-left: solid; */
    /* border-color: #212529; */
  }
}
/* Screen for most phones */
@media only screen and (max-width: 1179px){
  .first-column{

    width: 60%;
    margin-bottom: 10%;
  }

  .second-column{
    width: 40%;
    margin: 0px;
    text-align: left!important;
    padding-left: 0px;


  }

  .column2{
    margin: 0px;
    text-align: left!important;
    padding-left: 0px;
    font-size: medium;
  }

  .details-container{
    width: 100%;
    padding: 0px;
  }

  
}

/* Screen for most phones */
@media only screen and (max-width: 700px){
  .first-column{

    width: 100%;
    margin-bottom: 10%;
  }

  .second-column{
    width: 100%;
    margin: 0px;
    text-align: left!important;
    padding-left: 0px;


  }

  .column2{
    margin: 0px;
    text-align: left!important;
    padding-left: 0px;
    font-size: medium;
  }

  .med-name{
    padding: 0px;
  }

  .label-fonts{
    font-size: 14px;
  }

  .details-container{
    width: 100%;
    padding: 0px;
  }
}


@media only screen  and (max-width: 391px) and (min-width: 381px){
  .label-fonts{
    font-size: 13px;
  }
  .first-column{
    width: 100%;
  }

  .details-container{
    width: 100%;
    padding: 0px;
  }
}


@media only screen and (max-width: 380px){
  .label-fonts{
    font-size: 12px;
  }

  .edit-button{
    height: 38px;
    width: 50px;

  }

  .refill-btn{
    height: 38px;
    width: 58px;
  }

  .details-container{
    width: 100%;
    padding: 0px;
  }
}

